[package]
name = "nefsm_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# syn = { version = "1.0.107", features = ["full", "extra-traits", "visit"] }
# quote = "1.0.23"
# proc-macro2 = "1.0.50"
# proc-macro-error = "1.0.4"

proc-macro2 = "1.0.50"
syn = {version="1.0.107", features = ["full"]}
quote = "1.0.23"