[package]
name = "nefsm"
version = "0.1.0"
description = "A simple state machine library for Rust."
license = "MIT"
repository = "https://github.com/nano-e/ne-fsm"
readme = "../README.md"
keywords = ["rust", "fsm", "state", "machine"]
categories = ["algorithms"]
authors = ["Danny Moghnie <info@nano-e.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
