[package]
name = "fsm-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nefsm = { path = "../../nefsm" }
nefsm_macro = { path = "../../macro" }

tokio = { version = "1.24.2", features = ["full"] }
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"